--- a/poker-planning/package.json
+++ b/poker-planning/package.json
@@ -6,12 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "env-cmd mocha -R spec"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.8.2",
+    "react-toastify": "^9.1.1",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
